# micrograd

./: .gitignore  README.md  justfile  pyproject.toml
notebooks/: demo.ipynb  trace_graph.ipynb
src/micrograd/: engine.py  nn.py
tests/: test_engine.py
