[project]
name = "micrograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Luong", email = "justin@adora.so" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
]
